# talking-sites

./: README.md  pyproject.toml
talking_sites_poetry/: __main__.py
